feat: Create listing route for all products
