# src/main/routes/products.routes.ts
@@ -3,6 +3,6 @@ import ProductsController from '../../modules/products/controllers/products.cont
 
 const router = Router();
 router.post('/create', ProductsController.create);
-
+router.get('/list-all', ProductsController.listAll);
 
 export default router;
